--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^10.3.1   # latest stable as of 2025
-  cupertino_icons: ^1.0.8
+  supabase_flutter: ^2.5.6
+  file_picker: ^8.0.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
