--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^2.5.6
-  file_picker: ^8.0.0
-  url_launcher: ^6.3.0
+  file_picker: ^8.0.6
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
